@@ -301,6 +301,9 @@ set g_headshot 0
 set g_instagibDamage 400
 set g_inactivityOptions 3
 set g_ettvFlags 3
+set g_firstBloodMsg "^7[a] ^7drew ^1FIRST BLOOD ^7from [v]^7!"
+set g_firstBloodMsgPos 2
+set g_lastBloodMsg "^8And the final kill of this round goes to [a]^8!"
 
 // Lua API
 set lua_modules ""
