@@ -1796,6 +1796,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\g_message.c"
+				>
+			</File>
+			<File
 				RelativePath="g_misc.c"
 				>
 				<FileConfiguration
